--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8090
 spring.datasource.url=jdbc:h2:mem:student-db
 spring.h2.console.enabled=true
 spring.graphql.graphiql.enabled=true
+spring.graphql.path=/graphql
+
